# py2pyd

./: .gitignore  .rust-actions-toolkit.toml  .rust-toolkit.toml  CHANGELOG.md  CI_MIGRATION_GUIDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  TESTING_GUIDE.md  TURBO_CDN_INTEGRATION.md  build.rs  clippy.toml  release-plz.toml  test-cross-compile.ps1  test_module.py
.cargo/: config.toml
.github/workflows/: auto-release.yml.disabled  ci.yml  code-quality.yml  enhanced-release.yml  release-plz.yml  release.yml  semantic-release.yml  test-release-plz-v2.1.3.yml  test-rust-toolkit-v2.1.1.yml  zero-dependency-build.yml
docs/: RELEASE.md  VERSIONING.md
examples/: math_utils.py  test_runner.rs  turbo_cdn_test.rs
patches/libmimalloc-sys/: Cargo.toml
patches/libmimalloc-sys/src/: lib.rs
scripts/: release.ps1  release.sh
src/: build_tools.rs  lib.rs  main.rs  pyo3_compiler.rs  turbo_downloader.rs  uv_compiler.rs  uv_env.rs
src/compiler/: mod.rs
src/dcc/: mod.rs
src/parser/: mod.rs
src/python_env/: cleanup.rs  mod.rs  version.rs
src/transformer/: mod.rs
tests/: build_tools_test.rs  e2e_compilation_test.rs  integration_pip_package_test.rs  lib_api_test.rs  parser_test.rs  pip_download_test.rs  simple_package_test.rs  transformer_test.rs
