[package]
name = "py2pyd"
version = "0.1.0"
edition = "2021"
authors = ["Hal <loonghao@gmail.com>"]
description = "A Rust-based tool to compile Python modules to pyd files"
license = "MIT"
repository = "https://github.com/loonghao/py2pyd"
readme = "README.md"
keywords = ["python", "pyd", "compiler", "dcc", "extension"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "py2pyd"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
walkdir = "2.3"
rustpython-parser = "0.2"
tempfile = "3.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
dunce = "1.0"
which = "4.4"
dirs = "5.0"
once_cell = "1.18"
regex = "1.9"
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip = "0.6"
uuid = { version = "1.4", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
