[package]
name = "py2pyd"
version = "0.1.1"
edition = "2021"
authors = ["longhao <hal.long@outlook.com>"]
description = "A Rust-based tool to compile Python modules to pyd files"
license = "MIT"
repository = "https://github.com/loonghao/py2pyd"
readme = "README.md"
keywords = ["python", "pyd", "compiler", "dcc", "extension"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "py2pyd"
path = "src/main.rs"

[[example]]
name = "turbo_cdn_test"
path = "examples/turbo_cdn_test.rs"

[[example]]
name = "test_runner"
path = "examples/test_runner.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.8"
walkdir = "2.3"
rustpython-parser = "0.4"
tempfile = "3.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
dunce = "1.0"
which = "8.0"
dirs = "6.0"
once_cell = "1.18"
regex = "1.9"
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = "4.0"
uuid = { version = "1.4", features = ["v4"] }
turbo-cdn = "0.3.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
flate2 = "1.0"
tar = "0.4"
