[package]
name = "py2pyd"
version = "0.1.5"
edition = "2021"
authors = ["longhao <hal.long@outlook.com>"]
description = "A Rust-based tool to compile Python modules to pyd files"
license = "MIT"
repository = "https://github.com/loonghao/py2pyd"
readme = "README.md"
keywords = ["python", "pyd", "compiler", "dcc", "extension"]
categories = ["command-line-utilities", "development-tools"]
build = "build.rs"

[lib]
name = "py2pyd"
path = "src/lib.rs"

[[bin]]
name = "py2pyd"
path = "src/main.rs"

[[example]]
name = "turbo_cdn_test"
path = "examples/turbo_cdn_test.rs"

[[example]]
name = "test_runner"
path = "examples/test_runner.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.8"
walkdir = "2.3"
rustpython-parser = "0.4"
tempfile = "3.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
dunce = "1.0"
which = "8.0"
dirs = "6.0"
once_cell = "1.18"
regex = "1.9"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
zip = "7.0"
uuid = { version = "1.4", features = ["v4"] }
turbo-cdn = { version = "0.4.3", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }

# Override mimalloc dependency to fix cross-compilation issues
[dependencies.mimalloc]
version = "0.1"
optional = true

[features]
default = []
# Enable mimalloc only for native builds
mimalloc = ["dep:mimalloc"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
flate2 = "1.0"
tar = "0.4"





# Conditional patch for cross-compilation issues
# Only applied when PATCH_MIMALLOC environment variable is set
[patch.crates-io]
libmimalloc-sys = { path = "patches/libmimalloc-sys" }

# Linting configuration
[lints.clippy]
# Disable uninlined format args warning
# This warning can be overly strict and may cause CI/local version conflicts
uninlined_format_args = "allow"
# Allow some pedantic lints that can be overly strict
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
cast_precision_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
